--- a/HomeworkPortal/appsettings.json
+++ b/HomeworkPortal/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Burak\\SQLEXPRESS;Database=PortalDB;User Id=sa;Password=123;TrustServerCertificate=True;"
-  }
+    "sqlCon": "Server=Burak\\SQLEXPRESS;Database=PortalDB;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "AllowedHosts": "*"
 }
